--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   width: 100%;
   height: 100%;
   resize: none;
+  word-spacing: normal;
   background-color: transparent;
 }
 .rth-overlay {
@@ -23,6 +24,11 @@
   top: 0;
   left: 0;
 }
+.rth-overlay * {
+  margin: 0;
+  padding: 0;
+}
+
 .rth-overlay-text {
   display: inline-block;
   white-space: pre-wrap;
